SIEW-404 WCAG Changed text color on date in news archive to achive correct contrast ratio.

--- a/assets/source/sass/layout/_main-content.scss
+++ b/assets/source/sass/layout/_main-content.scss
@@ -60,7 +60,7 @@
 
     .post-date {
         font-size: .85em;
-        color: #777;
+        color: #666666;
     }
 
     .comment-form-comment {
